# zk-benchmark

./: README.md  bench.sh
checkers/: .gitignore  README.md
checkers/common/: checker-api.bash  performance_over_time.csv
checkers/mm/: README.md
checkers/mm/common/: Cargo.toml
checkers/mm/common/metamath-files/: .gitignore  mk_size_example.py
checkers/mm/common/metamath-files/metamath-test/: README.md  anatomy-bad1.mm  anatomy-bad2.mm  anatomy-bad3.mm  anatomy.mm  big-unifier-bad1.mm  big-unifier-bad2.mm  big-unifier-bad3.mm  big-unifier.mm  demo0-bad1.mm  demo0-includee.mm  demo0-includer.mm  demo0.mm  miu.mm  tiny.mm
checkers/mm/common/metamath-files/theory/: README.md  assign.imp.proof-ax.mm  disjointness-alt-lemma.mm  impreflex-compressed-goal.mm  impreflex-compressed.mm  impreflex.mm  perceptron-goal.mm  perceptron.mm  proof-prelude-1M-tok.mm  proof-prelude-82k-tok.mm  proof-prelude-9k-tok.mm  proof-prelude-ax.mm  simple-broken.mm  simple-compressed.mm  simple.mm  svm5.mm  transfer-batch-1k-goal.mm  transfer-goal.mm  transfer-largest-slice.mm  transfer-simple-compressed-goal.mm  transfer-simple-goal.mm  transfer-task-specific.mm  transfer5000.mm
checkers/mm/common/mmlib/: Cargo.toml
checkers/mm/common/mmlib-host/: Cargo.toml
checkers/mm/common/mmlib-host/src/: lib.rs
checkers/mm/common/mmlib/src/: lib.rs  vecmap.rs
checkers/mm/common/mmtokens/: Cargo.toml
checkers/mm/common/mmtokens/src/: lib.rs
checkers/mm/common/mmtool/: Cargo.toml  README.md  pyproject.toml  report.md
checkers/mm/common/mmtool/mmtool/: mmtool_report.py
checkers/mm/common/mmtool/src/: main.rs
checkers/mm/mm-cairo/: Cargo.toml  Makefile  README.md  Scarb.toml  checker  pyproject.toml
checkers/mm/mm-cairo/guest/: Scarb.toml
checkers/mm/mm-cairo/guest/src/: lib.cairo
checkers/mm/mm-cairo/host/: Cargo.toml  build.rs
checkers/mm/mm-cairo/host/src/: main.rs
checkers/mm/mm-cairo/mm_cairo/: generate_report.py
checkers/mm/mm-cairo/scripts/: stone_params.py
checkers/mm/mm-cairo/src/: lib.cairo  main.rs  test.cairo
checkers/mm/mm-jolt/: Cargo.toml  README.md  checker
checkers/mm/mm-jolt/guest/: Cargo.toml
checkers/mm/mm-jolt/guest/src/: lib.rs
checkers/mm/mm-jolt/src/: main.rs
checkers/mm/mm-lurk/: .gitignore  README.md  checker  mm-lurk.sh  replace_lurk_token.py
checkers/mm/mm-lurk/doc/: demo0.verification.md  outputs.md
checkers/mm/mm-lurk/src/: fast-successful-tests.sh  mk_lurk_data.py  mk_lurk_data.sh  mm-prelude.lurk  mmverify.lurk  mmverify.sh  test.sh  test2.sh
checkers/mm/mm-nexus/: Cargo.toml  checker  setup.sh
checkers/mm/mm-nexus/common/: Cargo.toml
checkers/mm/mm-nexus/common/src/: lib.rs
checkers/mm/mm-nexus/host/: Cargo.toml
checkers/mm/mm-nexus/host/src/: main.rs
checkers/mm/mm-nexus/host/src/guest/: Cargo.toml
checkers/mm/mm-nexus/host/src/guest/src/: main.rs
checkers/mm/mm-risc0/: Makefile  README.md  checker  rust-toolchain.toml
checkers/mm/mm-risc0/host/: Cargo.toml
checkers/mm/mm-risc0/host/src/: main.rs
checkers/mm/mm-risc0/methods/: Cargo.toml
checkers/mm/mm-risc0/methods/guest/: Cargo.toml
checkers/mm/mm-risc0/methods/guest/src/: main.rs
checkers/mm/mm-sp1/: .gitignore  Makefile  checker
checkers/mm/mm-sp1/guest/: Cargo.toml
checkers/mm/mm-sp1/guest/elf/: riscv32im-succinct-zkvm-elf
checkers/mm/mm-sp1/guest/src/: main.rs
checkers/mm/mm-sp1/host/: Cargo.toml  build.rs
checkers/mm/mm-sp1/host/src/: main.rs
checkers/mm/mm-wasm/: .gitignore  0001-expand-image-capacity-for-metamath.patch  0002-pi2-specific-timing-information.patch  Cargo.toml  Checker  README.md  checker  setup.sh
checkers/mm/mm-wasm/guest/: Cargo.toml
checkers/mm/mm-wasm/guest/src/: lib.rs
checkers/mm/mm-wasm/host/: Cargo.toml
checkers/mm/mm-wasm/host/src/: main.rs
checkers/mm/runtest/anatomy/: anatomy.mm
data/: empty.csv  zk_measurements.csv
mm-files/: 25.erc20transfer_success_tm_0_9.mm  3.erc20transfer_success_tm_0.mm  45.erc20transfer_success_tm_0_6.mm  9.erc20transfer_success.mm  empty.mm  hol_ax13.mm  hol_cbvf.mm  hol_idi.mm  hol_wov.mm
