[package]
name = "mm-cairo"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.92"
serde_json = "1.0.125"
mmlib-host = { path = "../common/mmlib-host" }
clap = {version = "4.5.9", features = ["derive"]}
cairo-lang-runner = "2.9.0-dev.0"
cairo-lang-sierra = "2.9.0-dev.0"
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm/" }
cairo1-run = { git = "https://github.com/lambdaclass/cairo-vm/" }
starknet-types-core = "0.1.5"
tempfile = "3.13.0"
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }

[workspace]
