[package]
name = "mm-cairo"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.92"
serde_json = "1.0.125"
clap = {version = "4.5.9", features = ["derive"]}
mmlib-host = { path = "../../common/mmlib-host" }
stwo-cairo-serialize = { git = "https://github.com/starkware-libs/stwo-cairo" }
starknet-ff = "0.3.7"
scarb-metadata = { git = "https://github.com/software-mansion/scarb" }

[build-dependencies]
scarb-metadata = { git = "https://github.com/software-mansion/scarb" }