[package]
name = "mm-nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-sdk = { git = "https://github.com/nexus-xyz/nexus-zkvm.git", tag = "0.2.3", version = "0.2.3" }
clap = {version = "4.5.9", features = ["derive"]}
common = { path = "../common"}
mmlib-host = { path = "../../common/mmlib-host" }
