[package]
name = "host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mm-risc0"
path = "src/main.rs"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "=1.0.5", default-features = false, features = ["prove"]}
bincode = "1.3"
mmtokens = { path = "../../common/mmtokens" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
mmlib-host = { path = "../../common/mmlib-host" }
clap = {version = "4.5.9", features = ["derive"] }

[features]
cuda = ["risc0-zkvm/cuda"]