[package]
version = "0.1.0"
name = "mm-sp1"
edition = "2021"

[dependencies]
sp1-sdk = "3.0.0-rc4"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
mmlib-host = { path = "../../common/mmlib-host" }


[build-dependencies]
sp1-helper = "3.0.0-rc4"
