[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
mmtokens = { path = "../../common/mmtokens" }
mmlib = { path = "../../common/mmlib", default-features = false, features = ['use_hints'] }
wasm-bindgen = "0.2.92"
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git" }
serde = { version = "1.0", default-features = false, features = [
  "alloc",
  "derive",
] }