[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=1.0.5", default-features = false, features = ['std'] }
mmtokens = { path = "../../../common/mmtokens" }
mmlib = { path = "../../../common/mmlib", default-features = false, features = ['use_hints'] }
